--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
+    <script src="path/to/p5.sound.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
-  </style>
-  <script src="libraries/p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="trolley.js"></script>
-</head>
-
-<body>
-  <main>
-  </main>
-</body>
-
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="trolley.js"></script>
+  </body>
 </html>
